--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,6 @@
     <string name="house_not_found">This house is not visited yet, you may proceed.</string>
     <string name="house_status_pending">Status: Pending</string>
     <string name="referraldialog"> যার মাধ্যমে আপনার এখানে আসা , তার মোবাইল নাম্বার লিখুন</string>
-
+    <string name="ok">Yes</string>
 
 </resources>
