Update Status,image url,housename,b_array

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="col_fBbuildingContacts">fBbuildingContacts</string>
     <string name="col_logoutsession">logoutsession</string>
     <string name="col_loginsession">loginsession</string>
+    <string name="col_buildingstatus">buildingStatus</string>
 
 </resources>
