--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,11 @@
     <string name="sign_out_failed">Sign out failed</string>
 
     <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="house_not_found">This house is not visited yet, you may proceed.</string>
     <string name="house_status_pending">Status: Pending</string>
-    <string name="referraldialog"> যার মাধ্যমে আপনার এখানে আসা , তার মোবাইল নাম্বার লিখুন</string>
+    <string name="referraldialog"> যার মাধ্যমে আপনার এখানে আসা, তার মোবাইল নাম্বার লিখুন</string>
     <string name="ok">Yes</string>
     <string name="error_field_required">This field is required</string>
 
@@ -26,5 +27,7 @@
     <string name="col_logoutsession">logoutsession</string>
     <string name="col_loginsession">loginsession</string>
     <string name="col_buildingstatus">buildingStatus</string>
-
+    <string name="col_fNotification">fNotification</string>
+    <string name="col_fPeopleType">fPeopleType</string>
+    <string name="col_GuardTrainerTrack">guardTrainerTrack</string>
 </resources>
