--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="house_not_found">This house is not visited yet, you may proceed.</string>
-    <string name="house_status_pending">Status: Pending</string>
+    <string name="house_status_pending">This House already visited</string>
     <string name="referraldialog"> যার মাধ্যমে আপনার এখানে আসা, তার মোবাইল নাম্বার লিখুন</string>
     <string name="ok">Yes</string>
     <string name="error_field_required">This field is required</string>
